# rust-cli

./: Cargo.toml  README.md  TODO.md
cli_builder/: Cargo.toml
cli_builder/src/: command.rs  config.rs  derives.rs  lib.rs  name.rs  option.rs
cli_builder/src/reader/: mod.rs  result.rs
cli_derive/: Cargo.toml
cli_derive/src/: dummies.rs  err.rs  lib.rs
cli_derive/src/cmdline/: attrs.rs  field.rs  flag.rs  mod.rs
cli_derive/src/command/: mod.rs
cli_derive/src/utils/: mod.rs  set_once.rs  span.rs
cli_derive_macros/: Cargo.toml
cli_derive_macros/src/: lib.rs
cli_lexer/: Cargo.toml
cli_lexer/src/: common.rs  err.rs  lib.rs
cli_lexer/src/internal/: flag_init.rs  flag_name.rs  mod.rs
cli_lexer/src/iters/: commanditer.rs  flagiter.rs  mod.rs
examples/: cargo.rs  cargo_derive.rs  pkg_mgr.rs
src/: command.rs  help.rs  lib.rs  name.rs  option.rs  reader.rs  validator.rs
src/setup/: command.rs  help.rs  mod.rs  name.rs  option.rs
tests/: derive.rs
