[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "cli_builder",
    "cli_derive",
    "cli_derive_macros",
    "cli_lexer",
]

[lib]
name = "cli"
path = "src/lib.rs"

[dependencies]
cli_builder = { path = "./cli_builder" }
cli_derive = { path = "./cli_derive" }
cli_derive_macros = { path = "./cli_derive_macros" }
cli_lexer = { path = "./cli_lexer" }

[[example]]
name = "cargo"
path = "examples/cargo.rs"

[[example]]
name = "cargo_derive"
path = "examples/cargo_derive.rs"

[[test]]
name = "derives"
path = "tests/derive.rs"
